platforms/vps-k8s/kustomize/base/apps/jellyfin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jellyfin
  labels:
    app.kubernetes.io/name: jellyfin
spec:
  selector:
    app.kubernetes.io/name: jellyfin
  ports:
    - port: 8096
      targetPort: 8096
